Fix modal spacing

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -128,6 +128,7 @@
 
 .home .aboutMeModal h2 {
   font-size: 2.3rem;
+  margin-bottom: 5vh;
 }
 
 .home .aboutMeModal h2::after {
